--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,28 +1,46 @@
 .home{
     width: 100%;
-    min-height: 400vh;
+    /* min-height: 300vh; */
     
     /* background-image: url('../../Img/carousel-1.jpg'); */
 }
 
+.home-carusel::after{
+    bottom: -1px;
+    background: url(../../Img/overlay-bottom.png);
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 15px;
+    left: 0;
+    z-index: 1;
+}
+
 .carusel1{
-    position:absolute;
-    z-index: -9999;
-    max-width: 100%;
-    object-fit: cover;
+    width: 100% !important;
+    height: 100%;
+    vertical-align: middle;
+    object-fit: cover   ;
+    border-style: none;
 }
 
 .home .home-carusel{
-    /* padding: 110px 0 0 0 ; */
-    width: 100%;
-    height: 114.5vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #33211dad;
-}
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(51,33,29,0.7);
+    z-index: 1;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: column !important;
+    display: flex !important;
+    position: absolute;
+    padding: 20px  0;
+    color: var(--white);
+    text-align: center;
 
+}
 
 .home .home-carusel h2{
     color: var(--yellow);
