The web page is finished, only the media (responsiveness) feature remains to be written

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,6 +1,6 @@
 .about{
     width: 100%;
-    margin-top: 100px;
+    margin: 100px 0 100px ;
     display: flex;
     flex-direction: column;
     justify-content: center;
