--- a/src/Components/Pages/Testimonial/Testimonial.css
+++ b/src/Components/Pages/Testimonial/Testimonial.css
@@ -35,7 +35,8 @@
     line-height: 1.5;
     margin-bottom: 8px;
 }
-.testimonial__list{
+
+.testimonial__list {
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -43,4 +44,26 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 50px;
+}
+
+.testimonial__span-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.testimonial__span {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #DA9F5B;
+}
+.testimonial__span:hover {
+    cursor: pointer;
+    width: 40px;
+    border-radius: 50px;
+    background-color: #33211d;
+    transition: width 0.5s ease;
 }
