--- a/src/Components/Pages/Testimonial/Testimonial.css
+++ b/src/Components/Pages/Testimonial/Testimonial.css
@@ -1,69 +1,69 @@
 .testimonial {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    margin-top: 100px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 .testimonial__head {
-    margin-bottom: 50px;
-    text-align: center;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
 .testimonial__title {
-    color: var(--yellow);
-    font-size: 24px;
-    line-height: 1.5;
-    letter-spacing: 5px;
-    margin-bottom: 8px;
-    text-transform: uppercase;
+  color: var(--yellow);
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin-bottom: 8px;
+  text-transform: uppercase;
 }
 
 .testimonial__title::before {
-    display: block;
-    width: 2px;
-    height: 100px;
-    margin: 0 auto;
-    margin-bottom: 8px;
-    background-color: var(--yellow);
-    content: '';
+  display: block;
+  width: 2px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 8px;
+  background-color: var(--yellow);
+  content: "";
 }
 
 .testimonial__desc {
-    color: var(--cofe);
-    font-size: 56px;
-    line-height: 1.5;
-    margin-bottom: 8px;
+  color: var(--cofe);
+  font-size: 56px;
+  line-height: 1.5;
+  margin-bottom: 8px;
 }
 
 .testimonial__list {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 50px;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
 }
 
 .testimonial__span-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .testimonial__span {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-    border-radius: 50%;
-    background-color: #DA9F5B;
+  width: 20px;
+  height: 20px;
+  margin: 5px;
+  border-radius: 50%;
+  background-color: #da9f5b;
 }
 .testimonial__span:hover {
-    cursor: pointer;
-    width: 40px;
-    border-radius: 50px;
-    background-color: #33211d;
-    transition: width 0.5s ease;
+  cursor: pointer;
+  width: 40px;
+  border-radius: 50px;
+  background-color: #33211d;
+  transition: width 0.5s ease;
 }
