--- a/src/Components/Pages/Reservation/Reservation.css
+++ b/src/Components/Pages/Reservation/Reservation.css
@@ -1,135 +1,126 @@
-.reservation{
-    height: 90vh;
-    display: flex;
-    margin: 50px 0;
-    justify-content: center;
-    align-items: center;
-    /* background-color: aqua; */
+.reservation {
+  height: 90vh;
+  display: flex;
+  margin: 50px 0;
+  justify-content: center;
+  align-items: center;
+  /* background-color: aqua; */
 }
 
-.reservation__content{
-    width: 74%;
-    height: 90vh;
-    background: linear-gradient(rgba(51,33,29,0.9), rgba(51,33,29,0.9)),url(../../../img/bg.jpg);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
+.reservation__content {
+  width: 74%;
+  height: 90vh;
+  background: linear-gradient(rgba(51, 33, 29, 0.9), rgba(51, 33, 29, 0.9)),
+    url(../../../img/bg.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
-.reservation__content::before{
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 15px;
-    left: 0;
-    z-index: 1;
-    background: url(../../../img/overlay-top.png);
+.reservation__content::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 15px;
+  left: 0;
+  z-index: 1;
+  background: url(../../../img/overlay-top.png);
 }
 
-.reservation__content::after{
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 15px;
-    left: 0;
-    bottom: -1px;
-    z-index: 1;
-    background: url(../../../img/overlay-bottom.png);
+.reservation__content::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 15px;
+  left: 0;
+  bottom: -1px;
+  z-index: 1;
+  background: url(../../../img/overlay-bottom.png);
 }
 
-.reservation__content
- .for-online-reservation__content {
-    width: 48%;
-    height: 88vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 3rem;
-    gap: 10px;
-    color: var(--white);
+.reservation__content .for-online-reservation__content {
+  width: 48%;
+  height: 88vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 3rem;
+  gap: 10px;
+  color: var(--white);
 }
 
-.reservation__content
- .for-online-reservation__content h1 {
-    color: var(--yellow);
-    font-size: 4.6rem;
- }
-
- .reservation__content
- .for-online-reservation__content h2 {
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 1.7;
- }
-
- .reservation__content
- .for-online-reservation__content > p{
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    margin-bottom: 10px;
-    letter-spacing: 1px;
- }
-
-.for-online-reservation__content--check{
-    display: flex;
-    gap: 5px;
-    align-items: center;
+.reservation__content .for-online-reservation__content h1 {
+  color: var(--yellow);
+  font-size: 4.6rem;
 }
 
-.for-online-reservation__content--check 
-.for-online-reservation__content--icons {
-    color: var(--yellow);
-    font-size: 30px;
+.reservation__content .for-online-reservation__content h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 1.7;
 }
 
-.for-online-reservation__content--check p{
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 1px;
+.reservation__content .for-online-reservation__content > p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
 }
 
-
-
-
-
-.reservation__content--forma{
-    height: 90vh;
-    width: 48%;
-    gap: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--cofe);
-    opacity: 80%;
+.for-online-reservation__content--check {
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
-.reservation__content--forma h1{
-    color: var(--white);
-    font-size: 2.5rem;
-    line-height: 2;
-
+.for-online-reservation__content--check
+  .for-online-reservation__content--icons {
+  color: var(--yellow);
+  font-size: 30px;
 }
 
-.reservation__content--forma--item{
-    width: 80%;
-    height: 7vh;
-    padding-left: 20px;
-    padding-right: 5px;
-    font-size: 1rem;
-    border: 2px solid var(--yellow);
-    background-color: var(--cofe);
-    color: rgb(137, 137, 137);
-
+.for-online-reservation__content--check p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 1px;
 }
 
-.reservation__content--forma-item__btn{
-    background-color: var(--yellow);
-    color: var(--cofe);
-    font-size: 1.2rem;
+.reservation__content--forma {
+  height: 90vh;
+  width: 48%;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--cofe);
+  opacity: 80%;
+}
+
+.reservation__content--forma h1 {
+  color: var(--white);
+  font-size: 2.5rem;
+  line-height: 2;
+}
+
+.reservation__content--forma--item {
+  width: 80%;
+  height: 7vh;
+  padding-left: 20px;
+  padding-right: 5px;
+  font-size: 1rem;
+  border: 2px solid var(--yellow);
+  background-color: var(--cofe);
+  color: rgb(137, 137, 137);
+}
+
+.reservation__content--forma-item__btn {
+  background-color: var(--yellow);
+  color: var(--cofe);
+  font-size: 1.2rem;
 }
