--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -1,89 +1,87 @@
 .our-services {
-   width: 100%;
-   max-width: 1200px;
-   margin: 0 auto;
-   margin-top: 100px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 .our-services__head {
-   margin-bottom: 50px;
-   text-align: center;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
 .our-services__title {
-   color: var(--yellow);
-   font-size: 24px;
-   line-height: 1.5;
-   letter-spacing: 5px;
-   margin-bottom: 8px;
-   text-transform: uppercase;
+  color: var(--yellow);
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin-bottom: 8px;
+  text-transform: uppercase;
 }
 
 .our-services__title::before {
-   display: block;
-   width: 2px;
-   height: 100px;
-   margin: 0 auto;
-   margin-bottom: 8px;
-   background-color: var(--yellow);
-   content: '';
+  display: block;
+  width: 2px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 8px;
+  background-color: var(--yellow);
+  content: "";
 }
 
-.our-services__desc{
-   color: var(--cofe);
-   font-size: 56px;
-   line-height: 1.5;
-   margin-bottom: 8px;
+.our-services__desc {
+  color: var(--cofe);
+  font-size: 56px;
+  line-height: 1.5;
+  margin-bottom: 8px;
 }
-.our-services__list{
-   padding: 0;
-   margin: 0;
-   list-style-type: none;
-   display: flex;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: center;
+.our-services__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
-
-
 
 /* ///////////////////// */
 
-.service-item{
-   width: 100%;
-   max-width: 570px;
-   padding: 0px 10px;
-   margin-bottom: 50px;
-   display: flex;
-   align-items: center;
+.service-item {
+  width: 100%;
+  max-width: 570px;
+  padding: 0px 10px;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
 }
-.service-item__content{
-   margin-left: 20px;
-}
-
-.service-item__content .service-item__content-icons{
-   color: var(--cofe);
-   margin: 0 10px -15px 0;
-   border-radius: 50%;
-   padding: 12px;
-   font-size: 20px;
-   box-sizing: content-box;
-   background-color: var(--yellow);
-   /* display: flex; */
+.service-item__content {
+  margin-left: 20px;
 }
 
-.service-item__title{
-   display: inline-block;
-   align-items: center;
-   color: var(--cofe);
-   font-size: 24px;
-   line-height: 1.5;
-   margin-bottom: 15px;
+.service-item__content .service-item__content-icons {
+  color: var(--cofe);
+  margin: 0 10px -15px 0;
+  border-radius: 50%;
+  padding: 12px;
+  font-size: 20px;
+  box-sizing: content-box;
+  background-color: var(--yellow);
+  /* display: flex; */
 }
 
-.service-item__desc{
-   color: rgba(85, 85, 85, 0.802);
-   font-size: 16px;
-   line-height: 1.5;
-   word-spacing: 3px;
+.service-item__title {
+  display: inline-block;
+  align-items: center;
+  color: var(--cofe);
+  font-size: 24px;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+.service-item__desc {
+  color: rgba(85, 85, 85, 0.802);
+  font-size: 16px;
+  line-height: 1.5;
+  word-spacing: 3px;
 }
